<resources>
    <string name="app_name">I-Bike</string>
    <string name="API_KEY">AIzaSyAkR_UI7n_r7CtiiGZh2_N22ogxTO9Jq1I</string>
    <string name="title_activity_user">User</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Drawer primary item titles-->
    <string name="drawer_bike_title">Bikes</string>
    <string name="drawer_station_title">Stations</string>
    <string name="drawer_health_title">E-Health</string>

    <!--Drawer secondary item titles-->
    <string name="drawer_book_bike_title">Reserve</string>
    <string name="drawer_lock_bike_title">Lock bikes</string>
    <string name="drawer_cancel">Cancel reservation</string>

    <!--Activities titles-->
    <string name="reserve_activity_title">Reserve bike</string>
    <string name="lock_activity_title">Lock/Unlock bikes</string>
    <string name="stations_activity_title">Nearby stations</string>
    <string name="cancel_activity_title">Cancel reservation</string>

    <!--Dialog's content-->
    <string name="loading_text">Loading...</string>
    <string name="select_hours_text">Please input duration</string>
    <string name="select_hours_title">Reservation</string>
    <string name="select_hours_positive">Book</string>

    <!--Locked bike Activity-->
    <string name="duration_place_holder_text">Reserve duration : </string>
    <string name="timestamp_holder_text">Reserved at : </string>
    <string name="lock_button_text">Lock</string>
    <string name="unlock_button_text">Unlock</string>
    <!--cancel reserve activity-->
    <string name="cancel_button">Cancel</string>

    <!--EHealth -->
    <string name="save_button">Save</string>
    <string name="ehealth_title">E-Health</string>
    <string name="history_button">History</string>
    <string name="start_button">Start</string>
    <string name="start_item">Start</string>
    <string name="history_item">History</string>

    <!--general guide-->
    <string name="general_title">General options: </string>
    <string name="option1">Option1: book a bicycle for a specific duration.</string>
    <string name="option2">Option2: lock and unlock you bicycle.</string>
    <string name="option3">Option3: visualize the nearest sattion with an optimal road.</string>
    <string name="option4">Option4: E-health interface to check your temperature, heart-beat and calories burnt.</string>
    <!--booking guide-->
    <string name="book_title">Booking: </string>
    <string name="book1">Step1: click on reserve and choose your bicycle. </string>
    <string name="book2">Step2: click on unclock to unclock your bicycle or lock to lock it out of station. </string>
    <string name="book3">Step3: start using your bicycle. </string>
    <!--E-health guide-->
    <string name="health_title">E-Health: </string>
    <string name="health1">Step1: click on start to get your realtime data. </string>
    <string name="health2">Step2: click on save if you want to save it in your health history. </string>
    <string name="health3">Step3: click on history to show tou health history. </string>
    <!--E-health history-->
    <string name="Health_History_title">Health History</string>
    <string name="temp_history">Temperature</string>
    <string name="beat_history">Beats</string>
    <string name="calorie_history">Calories</string>
    <!-- Events-->
    <string name="event_title">Title:</string>
    <string name="event_date">Date:</string>
    <string name="event_btn">Participate</string>
    <string name="event_activity_title">Events</string>
    <!--Bluetooth-->
    <string name="info_text">If no devices are listed please pair your device in Android settings</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="devices_title">Bluetooth Devices</string>
    <!--tabLayoutinfo-->
    <string name="send_btn">Send</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="weight_text">Weight</string>
    <string name="age_text">Age</string>
    <string name="kg_text">Kg</string>

    <!--tabLayouthealth-->
    <string name="save_btn">Save</string>
    <string name="Start_btn">Start</string>
    <string name="Stop_btn">Stop</string>
    <string name="health_frag_title">Health</string>
    <!--tabLayoutDrink-->
    <string name="add_water">How much you drinked?</string>
    <string name="water_unit">mL</string>
    <string name="add_water_btn">Add</string>
    <string name="water_title">Add Water</string>
    <string name="congra">Nice you Drinked Enough Water!</string>
    <string name="congra_title">Congratulation</string>
    <!--bikerInfo-->
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="duration">Duration</string>



</resources>
