<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:id="@+id/info_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/info"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender_layout"
        android:layout_below="@+id/info_img"
        android:layout_marginTop="50dp"

        >
        <TextView
            android:id="@+id/gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_text"
            android:textColor="@color/tint"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <RadioGroup
            android:id="@+id/gender"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/female"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/gender_text"
            android:layout_toRightOf="@+id/gender_text">

            <RadioButton
                android:layout_marginLeft="20dp"
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_text"
                android:textColor="@color/tint"
                android:layout_gravity="center"
                />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_text"
                />

        </RadioGroup>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/weight_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/gender_layout"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_text"
            android:textColor="@color/tint"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/weight_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:hint="YOUR WEIGHT"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg_text"
            android:textSize="20sp"
            android:textColor="@color/tint"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/age_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight_layout"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_text"
            android:textColor="@color/tint"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/age_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="number"
            android:hint="YOUR AGE"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>
        <Button
            android:id="@+id/start1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/send_btn"
            android:layout_below="@+id/age_layout"
            android:layout_marginTop="30dp"
            android:background="@drawable/info_btn"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>