<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:foreground="?attr/selectableItemBackground">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/event_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/event"/>


            <TextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/event_title"
                android:layout_alignTop="@id/event_image"
                android:layout_toEndOf="@id/event_image"
                android:layout_toRightOf="@id/event_image"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/event_title_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_alignTop="@id/event_image"
                android:layout_toEndOf="@id/event_title"
                android:layout_toRightOf="@id/event_title"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/event_date"
                android:layout_below="@id/event_title"
                android:layout_toEndOf="@id/event_image"
                android:layout_toRightOf="@id/event_image"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/event_date_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_below="@id/event_title"
                android:layout_toEndOf="@id/event_date"
                android:layout_toRightOf="@id/event_date"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/body_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_below="@id/event_image"
                android:layout_alignStart="@id/event_image"
                android:layout_alignLeft="@id/event_image"
                android:layout_marginTop="5dp"/>


            <Button
                android:id="@+id/event_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/event_btn"
                android:text="@string/event_btn"
                android:textColor="@color/ButtonsTextColors"
                android:layout_below="@id/body_event"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>